dev-deployments/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress-1
  labels:
    testlabel: helloworld
  annotations:  
    zero-scaling/enabled: "true"
    zero-scaling/deploymentName: "echo1"
spec:
  rules:
  - host: echo1.test.vscodecloud.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.test.vscodecloud.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress-3
  labels:
    testlabel: woohoo
  annotations:  
    zero-scaling/enabled: "true"
    zero-scaling/deploymentName: "echo3"
spec:
  rules:
  - host: echo3.test.vscodecloud.com
    http:
      paths:
      - backend:
          serviceName: echo3
          servicePort: 80
